// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`abbreviation > should log resolved tasks only > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /REPO_ROOT/node_modules/.pnpm/nadle{version}/node_modules/nadle/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] Resolved tasks:
    <Yellow><Bold>hell</BoldDim></Yellow>  → <Green><Bold>hello</BoldDim></Green>
    <Yellow><Bold>cop </BoldDim></Yellow>  → <Green><Bold>copy</BoldDim></Green>

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from nadle!
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>goodbye</BoldDim> <Yellow>STARTED</Yellow>

Goodbye, tak!
[log] 
<Green>✓</Green> Task <Bold>goodbye</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>prepare</BoldDim> <Yellow>STARTED</Yellow>

Preparing...
[log] 
<Green>✓</Green> Task <Bold>prepare</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>copy</BoldDim> <Yellow>STARTED</Yellow>

Copying from assets/ to dist/
[log] 
<Green>✓</Green> Task <Bold>copy</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>4</BoldDim> tasks executed
`;

exports[`abbreviation > should resolve abbr task properly > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /REPO_ROOT/node_modules/.pnpm/nadle{version}/node_modules/nadle/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] Resolved tasks:
    <Yellow><Bold>hell</BoldDim></Yellow>  → <Green><Bold>hello</BoldDim></Green>

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from nadle!
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
